# FasterTransformer

./: CMakeLists.txt
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/MT/: CMakeLists.txt  Decoder.cc  Decoder.h  DecoderLayerWeight.h  Decoding.cc  Decoding.h  DecodingWeight.h  mt_example.cc
